--- a/services/pics-service/pyproject.toml
+++ b/services/pics-service/pyproject.toml
@@ -3,8 +3,7 @@ name = "pics-service"
 version = "0.1.0"
 description = "Steam PICS data fetching microservice for PublisherIQ"
 authors = ["PublisherIQ"]
-readme = "README.md"
-packages = [{include = "src"}]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.11"
